tests/snapshots/bridge_snapshot_exhaustive__cross_bridge__cross_request_gemini.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&req"
---
{
  "model": "gemini-2.5-flash",
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "What is 2+2?"
        }
      ]
    }
  ],
  "generationConfig": {
    "temperature": 0.0,
    "maxOutputTokens": 256
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "You are a math tutor."
      }
    ]
  }
}
