tests/snapshots/bridge_snapshot_exhaustive__cross_bridge__cross_request_openai.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&req"
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "system",
      "content": "You are a math tutor."
    },
    {
      "role": "user",
      "content": "What is 2+2?"
    }
  ],
  "temperature": 0.0,
  "max_tokens": 256
}
