tests/snapshots/bridge_snapshot_exhaustive__cross_bridge__cross_response_gemini.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&resp"
---
{
  "candidates": [
    {
      "content": {
        "role": "model",
        "parts": [
          {
            "text": "2+2 equals 4."
          }
        ]
      },
      "finishReason": "STOP"
    }
  ],
  "usageMetadata": {
    "promptTokenCount": 20,
    "candidatesTokenCount": 10,
    "totalTokenCount": 30
  }
}
