tests/snapshots/bridge_snapshot_exhaustive__cross_bridge__cross_tool_call_gemini.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&req"
---
{
  "model": "gemini-2.5-flash",
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Read /tmp/data.txt"
        }
      ]
    }
  ],
  "tools": [
    {
      "functionDeclarations": [
        {
          "name": "read_file",
          "description": "Read a file",
          "parameters": {
            "properties": {
              "path": {
                "type": "string"
              }
            },
            "required": [
              "path"
            ],
            "type": "object"
          }
        }
      ]
    }
  ]
}
