tests/snapshots/bridge_snapshot_exhaustive__cross_bridge__cross_tool_call_openai.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&req"
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "Read /tmp/data.txt"
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "read_file",
        "description": "Read a file",
        "parameters": {
          "properties": {
            "path": {
              "type": "string"
            }
          },
          "required": [
            "path"
          ],
          "type": "object"
        }
      }
    }
  ],
  "tool_choice": "auto"
}
